testsuite/tests/partial-sigs/should_fail/PartialTypeSignaturesDisabled.stderr

PartialTypeSignaturesDisabled.hs:4:8: error:
    Found hole: _ :: Bool
    To use the inferred type, enable PartialTypeSignatures
    In the type signature for ‘foo’: _ -> _

PartialTypeSignaturesDisabled.hs:4:13: error:
    Found hole: _ :: Bool
    To use the inferred type, enable PartialTypeSignatures
    In the type signature for ‘foo’: _ -> _
